--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,14 @@ main {
     color: #f3f1d5;
     display: flex;
     flex-direction: column;
-    padding-inline: 10%;
+    padding-inline: 0.5rem;
     justify-content: center;
+}
+
+@media screen and (min-width: 480px) {
+    main {
+        padding-inline: 10%;
+    }
 }
 
 #exposition {
@@ -75,9 +81,23 @@ main {
     box-shadow: 0 0rem 0.5rem #394f4f inset;
 }
 
+#character-select {
+    flex-basis: 22rem;
+    /* background-color: red; */
+}
+
+#character-list {
+    position: relative;
+    height: 22rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+}
+
 .character-card {
     background-color: #e3e7dc;
-    color: #776342;
+    color: #b08643;
     flex-basis: 20rem;
     height: 20rem;
     border-radius: 1rem;
@@ -87,6 +107,13 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    transition: all 0.2s;
+}
+
+.character-card:hover {
+    flex-basis: 22rem;
+    height: 22rem;
+    box-shadow: 0 0.5rem 1rem #394f4f;
 }
 
 footer {
