--- a/css/character_cards.css
+++ b/css/character_cards.css
@@ -1,32 +1,34 @@
 #character-select {
-    flex-basis: 22rem;
+    flex-grow: 1;
     transition: all 0.2s;
+    position: relative;
 }
 
 #character-list {
-    position: relative;
     height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 1rem;
 }
 
 .character-card {
+    position: relative;
     background-color: #e3e7dc;
     color: #b08643;
     flex-basis: 20rem;
     height: 20rem;
     border-radius: 1rem;
     padding: 1rem;
+    padding-top: 3rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    transition: all 0.2s;
+    justify-content: start;
     cursor: pointer;
     overflow: hidden;
+    transition: all 0.2s;
+    margin-inline: 0.5rem;
 }
 
 .character-card:hover {
@@ -35,19 +37,107 @@
     box-shadow: 0 0.5rem 1rem #394f4f;
 }
 
-.selection-on {
+.character-card-icon {
+    margin-bottom: 1rem;
+    width: 8rem;
+    height: 8rem;
+}
+
+.character-card-icon,
+.character-card h2 {
+    position: relative;
+    left: 0;
+    transition: all 0.2s;
+}
+
+.selected .character-card-icon,
+.selected.character-card h2 {
+    transform: translateX(50%);
+    left: -50%;
+}
+
+.character-card .character-desc {
     flex-grow: 1;
+}
+
+#character-select button {
+    padding: 1rem 2rem;
+    font-size: 14pt;
+    color: #dfb66f;
+    background-color: #394f4f;
+    box-shadow: 0 0 0.5rem #303e3e inset;
+    border: none;
+    border-radius: 1rem;
+    user-select: none;
+    cursor: pointer;
+}
+
+#character-select button:hover {
+    background-color: #4d9a9a;
+    color: #f3f1d5;
+    box-shadow: 0 0 0.5rem #394f4f;
+}
+
+#character-select button:active {
+    background-color: #70be61;
+    color: #f3f1d5;
+    box-shadow: 0 0rem 0.5rem #394f4f inset;
+}
+
+.hidden-until-selected {
+    opacity: 0;
+    transition: opacity 0.2s;
+    pointer-events: none;
+}
+
+.hidden-until-selected.selected {
+    opacity: 1;
+    pointer-events: initial;
 }
 
 .selection-on .character-card:not(.selected) {
     width: 0;
     min-width: 0;
     padding: 0;
+    margin: 0;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .selection-on .character-card.selected {
     flex-basis: 100%;
     flex-shrink: 0;
-    height: 100%;
+    height: 24rem;
+    padding-top: 1rem;
     cursor: default;
+}
+
+.character-stats {
+    position: absolute;
+    box-sizing: border-box;
+    top: 2rem;
+    height: 10rem;
+    left: 16rem;
+    right: 2rem;
+    padding: 2rem;
+    background-color: #aea495;
+    color: #f3f1d5;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.character-card strong {
+    color: #f7955c;
+}
+
+.character-stats strong {
+    color: #f3f1d5;
+}
+
+.character-back-button {
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
 }
