--- a/css/character_cards.css
+++ b/css/character_cards.css
@@ -1,11 +1,12 @@
 #character-select {
-    flex-grow: 1;
+    flex-basis: 24rem;
+    flex-shrink: 0;
     transition: all 0.2s;
     position: relative;
 }
 
 #character-list {
-    height: 100%;
+    height: 24rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -58,30 +59,6 @@
 
 .character-card .character-desc {
     flex-grow: 1;
-}
-
-#character-select button {
-    padding: 1rem 2rem;
-    font-size: 14pt;
-    color: #dfb66f;
-    background-color: #394f4f;
-    box-shadow: 0 0 0.5rem #303e3e inset;
-    border: none;
-    border-radius: 1rem;
-    user-select: none;
-    cursor: pointer;
-}
-
-#character-select button:hover {
-    background-color: #4d9a9a;
-    color: #f3f1d5;
-    box-shadow: 0 0 0.5rem #394f4f;
-}
-
-#character-select button:active {
-    background-color: #70be61;
-    color: #f3f1d5;
-    box-shadow: 0 0rem 0.5rem #394f4f inset;
 }
 
 .hidden-until-selected {
