--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ strong {
     align-self: center;
     display: flex;
     justify-content: center;
+    align-content: center;
     align-items: center;
     gap: 1rem;
     padding: 1rem;
