added support for modal boxes

--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,55 @@ main button:active {
     gap: 1rem;
 }
 
+#modals {
+    position: absolute;
+}
+
+.modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #00000022;
+}
+
+.modal-box {
+    width: 36rem;
+    min-height: 10rem;
+    display: flex;
+    flex-direction: column;
+    
+    color: #b08643;
+    border-radius: 1rem;
+    overflow: hidden;
+    
+    position: relative;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+}
+
+.modal-header {
+    background-color: #b08643;
+    color: #e3e7dc;
+    height: 2rem;
+}
+
+.modal-content {
+    flex-grow: 1;
+    padding: 1rem;
+    background-color: #e3e7dc;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.modal-content > * {
+    margin: 0;
+    text-align: center;
+}
+
 footer {
     background-color: #1a2a46;
     flex-basis: 3rem;
