--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,36 @@ body {
     background-size: cover;
 }
 
+#backdrop[data-bg="trailer"] {
+    background-image: url('../assets/trailer.jpg');
+    background-position: 0 100%;
+    background-size: cover;
+}
+
+#backdrop[data-bg="outside trailer"] {
+    background-image: url('../assets/outside_trailer.png');
+    background-position: 0 100%;
+    background-size: cover;
+}
+
+#backdrop[data-bg="morning drive"] {
+    background-image: url('../assets/morning_drive.png');
+    background-position: 0 100%;
+    background-size: cover;
+}
+
+#backdrop[data-bg="morning party"] {
+    background-image: url('../assets/morning_drive2.png');
+    background-position: 0 100%;
+    background-size: cover;
+}
+
+#backdrop[data-bg="walking campsites"] {
+    background-image: url('../assets/walking_campsites.png');
+    background-position: 0 100%;
+    background-size: cover;
+}
+
 #backdrop {
     position: absolute;
     z-index: -1;
