--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,14 @@ body {
     transform: translate(-50%, -50%);
     text-wrap: nowrap;
     font-size: 14pt;
+    text-shadow: 0 0 4px #00000088;
+}
+
+#floaty-text p.emphasized {
+    color: #ff538c;
+    text-shadow: 0 0 4px white;
+    font-weight: bold;
+    z-index: 1;
 }
 
 body::after {
@@ -101,6 +109,14 @@ body::after {
     transition: all 4s;
 }
 
+[data-stress-effects="low"] {
+    /* background-color: #888888; */
+}
+
+[data-stress-effects="low"] :is(header,footer) {
+    background-color: #576c8f;
+}
+
 [data-stress-effects="low"] #backdrop {
     filter: brightness(150%) contrast(150%) blur(4px);
 }
@@ -109,8 +125,26 @@ body::after {
     box-shadow: 0 0 16rem #ffffff inset;
 }
 
-[data-stress-effects="low"] :is(header, footer, main, #HUD){
+[data-stress-effects="low"] :is(main, #HUD){
     filter: brightness(120%) contrast(120%);
+}
+
+[data-stress-effects="low"] main{
+    animation: shake-low 0.6s linear infinite;
+}
+
+
+
+[data-stress-effects="high"] {
+    background-color: #22b1b6;
+}
+
+[data-stress-effects="high"] :is(header,footer) {
+    background-color: #ffffff;
+}
+
+[data-stress-effects="high"] :is(header,footer) :is(h1, img) {
+    filter: drop-shadow(0 0 2px #5b0018);
 }
 
 [data-stress-effects="high"] #backdrop {
@@ -121,8 +155,94 @@ body::after {
     box-shadow: 0 0 16rem 2rem #ffffff inset;
 }
 
-[data-stress-effects="high"] :is(header, footer, main, #HUD){
-    filter: brightness(180%);
+[data-stress-effects="high"] :is(main, #HUD){
+    filter: brightness(180%) contrast(120%);
+}
+
+[data-stress-effects="high"] main{
+    animation: shake-high 1s linear infinite;
+}
+
+header, footer {
+    transition: background-color 4s;
+}
+
+:is(header,footer) :is(h1, img) {
+    transition: filter 4s;
+}
+
+@keyframes shake-low {
+    0% {
+        left: 0px;
+        top: 0px;
+    }
+    12.5% {
+        left: 1px;
+        top: 0px;
+    }
+    37.5% {
+        left: -1px;
+        top: 0px;
+    }
+    62.5% {
+        left: 0px;
+        top: 1px;
+    }
+    87.5% {
+        left: 0px;
+        top: -1px;
+    }
+    100% {
+        left: 0px;
+        top: 0px;
+    }
+}
+
+@keyframes shake-high {
+    0% {
+        left: 0;
+        top: 0;
+    }
+    10% {
+        left: 2px;
+        top: 1px;
+    }
+    20% {
+        left: 1px;
+        top: -1px;
+    }
+    30% {
+        left: -1px;
+        top: 2px;
+    }
+    40% {
+        left: -2px;
+        top: 0px;
+    }
+    50% {
+        left: 0px;
+        top: 1px;
+    }
+    60% {
+        left: -2px;
+        top: 2px;
+    }
+    70% {
+        left: -1px;
+        top: 0px;
+    }
+    80% {
+        left: 0px;
+        top: 2px;
+    }
+    90% {
+        left: -2px;
+        top: 1px;
+    }
+    100% {
+        left: 0;
+        top: 0;
+    }
 }
 
 header {
@@ -131,7 +251,7 @@ header {
     flex-basis: 3rem;
     flex-shrink: 0;
     padding: 0.5rem;
-    transition: filter 2s;
+    /* transition: filter 2s; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -206,7 +326,7 @@ main {
 }
 
 main.theme-active {
-    background-color: #223e4bcc;
+    background-color: #113546aa;
 }
 
 @media screen and (min-width: 480px) {
@@ -243,6 +363,7 @@ main.theme-active {
 #exposition p {
     position: relative;
     margin: 0;
+    text-shadow: 0 0 4px #00000088;
 }
 
 #exposition p.small {
@@ -276,7 +397,7 @@ main.theme-active {
 } */
 
 strong {
-    color: #dfb66f;
+    color: #edc265;
 }
 
 #options {
@@ -296,7 +417,7 @@ strong {
 }
 
 main.theme-active #options {
-    background-color: #3b858f;
+    background-color: #2b8e9baa;
 }
 
 /* body:not([data-bg='none']) #options {
@@ -306,7 +427,7 @@ main.theme-active #options {
 button {
     padding: 1rem 2rem;
     font-size: 14pt;
-    color: #dfb66f;
+    color: #edc265;
     background-color: #39494f;
     box-shadow: 0 0 0.5rem #212d3b inset;
     border: none;
@@ -329,8 +450,9 @@ button:active {
 }
 
 button:disabled {
-    background-color: #606860;
-    box-shadow: 0 0 0.5rem #302020 inset;
+    background-color: #6c4e4e;
+    box-shadow: 0 0 0.5rem #381c25 inset;
+    color: #381c25;
 }
 
 button:disabled:active {
@@ -360,7 +482,7 @@ button:disabled:active {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    background-color: #223e4bcc;
+    background-color: #113546aa;
     border-bottom-right-radius: 1rem;
     transition: filter 2s;
 }
@@ -455,5 +577,5 @@ footer {
     flex-basis: 3rem;
     flex-shrink: 0;
     padding: 0.5rem;
-    transition: filter 2s;
+    /* transition: filter 2s; */
 }
